--- a/carrossel/image-carousel-with-javascript-master/index.html
+++ b/carrossel/image-carousel-with-javascript-master/index.html
@@ -8,6 +8,7 @@
     <title>image Carousel</title>
 </head>
 <body>
+    <!--inicio do carrossel-->
     <div class="carousel">
         <div class="image-container" id="imgs">
             <img src="https://images.unsplash.com/photo-1599394022918-6c2776530abb?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiojEyMDd9&auto=format&fit=crop&w=1458&q=80" alt="first">
@@ -15,13 +16,15 @@
             <img src="https://images.unsplash.com/photo-1599423300746-b62533397364?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiojEyMDd9&auto=format&fit=crop&w=1500&q=80" alt="third">
             <img src="https://images.unsplash.com/photo-1599561046251-bfb9465b4c44?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiojEyMDd9&auto=format&fit=crop&w=1492&q=80" alt="four">
         </div>
+    <!--fim do carrossel-->
 
+    <!--inicio dos botões-->
         <div class="buttons-container">
             <button id="left" class="btn">Prev</button>
             <button id="right" class="btn">Next</button>
         </div>
     </div>
-
+    <!--fim dos botões-->
 
 
     <script src="script.js"></script>
